--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                 <button type="button" class="hero__button">Заказать услугу</button>
             </section>
             <!--Hilites========================================== -->
-            <section>
+            <section class="section">
                 <h2 class="hilites__main-title">Отличия</h2>
-                <ul class="lists hilites__list">
+                <ul class="lists hilites__list container">
                     <li class="hilites__item">
                         <h3 class="hilites__title">Внимание к деталям</h3>
                         <p class="par hilites__par">
@@ -61,21 +61,21 @@
                             позиции.
                         </p>
                     </li>
-                    <li class="hilites-item">
+                    <li class="hilites__item">
                         <h3 class="hilites__title">Пунктуальность</h3>
                         <p class="par hilites__par">
                             Задача организации, в особенности же рамки и место обучения кадров
                             влечет за собой.
                         </p>
                     </li>
-                    <li class="hilites-item">
+                    <li class="hilites__item">
                         <h3 class="hilites__title">Планирование</h3>
                         <p class="par hilites__par">
                             Равным образом консультация с широким активом в значительной степени
                             обуславливает.
                         </p>
                     </li>
-                    <li class="hilites-item">
+                    <li class="hilites__item">
                         <h3 class="hilites__title">Современные технологии</h3>
                         <p class="par hilites__par">
                             Значимость этих проблем настолько очевидна, что реализация плановых
@@ -85,7 +85,7 @@
                 </ul>
             </section>
             <!--Tasks========================================== -->
-            <section class="tasks">
+            <section class="tasks container">
                 <h2 class="tasks__title titles">Чем мы занимаемся</h2>
                 <ul class="tasks__list lists">
                     <li class="tasks__item">
@@ -100,30 +100,40 @@
                 </ul>
             </section>
             <!--Team============================================ -->
-            <section class="team__section">
-                <h2 class="team__title titles">Наша команда</h2>
-                <ul class="lists team__list">
-                    <li class="team__item">
-                        <img src="./images/img(2).jpg" alt="Дизайнер" width="270"/>
-                        <h3 class="team__member">Игорь Демьяненко</h3>
-                        <p class="par team__member-position" lang="en">Product Designer</p>
-                    </li>
-                    <li class="team__item">
-                        <img src="./images/img(3).jpg" alt="Разработчик" width="270"/>
-                        <h3 class="team__member">Ольга Репина</h3>
-                        <p class="par team__member-position" lang="en">Frontend Developer</p>
-                    </li>
-                    <li class="team__item">
-                        <img src="./images/img(4).jpg" alt="Маркетолог" width="270"/>
-                        <h3 class="team__member">Николай Тарасов</h3>
-                        <p class="par team__member-position" lang="en">Marketing</p>
-                    </li>
-                    <li class="team__item">
-                        <img src="./images/img(5).jpg" alt="Дизайнер" width="270"/>
-                        <h3 class="team__member">Михаил Ермаков</h3>
-                        <p class="par team__member-position" lang="en">UI Designer</p>
-                    </li>
-                </ul>
+            <section class="team__section section">
+                <div class="container">
+                    <h2 class="team__title titles">Наша команда</h2>
+                    <ul class="lists team__list">
+                        <li class="team__item">
+                            <img class="team__img" src="./images/img(2).jpg" alt="Дизайнер" width="270"/>
+                            <div class="team__card">
+                                <h3 class="team__member">Игорь Демьяненко</h3>
+                                <p class="par team__member-position" lang="en">Product Designer</p>
+                            </div>
+                        </li>
+                        <li class="team__item">
+                            <img class="team__img" src="./images/img(3).jpg" alt="Разработчик" width="270"/>
+                            <div class="team__card">
+                                <h3 class="team__member">Ольга Репина</h3>
+                                <p class="par team__member-position" lang="en">Frontend Developer</p>
+                            </div>
+                        </li>
+                        <li class="team__item">
+                            <img class="team__img" src="./images/img(4).jpg" alt="Маркетолог" width="270"/>
+                            <div class="team__card">
+                                <h3 class="team__member">Николай Тарасов</h3>
+                                <p class="par team__member-position" lang="en">Marketing</p>
+                            </div>
+                        </li>
+                        <li class="team__item">
+                            <img class="team__img" src="./images/img(5).jpg" alt="Дизайнер" width="270"/>
+                            <div class="team__card">
+                                <h3 class="team__member">Михаил Ермаков</h3>
+                                <p class="par team__member-position" lang="en">UI Designer</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
             </section>
         </main>
         <!--Footer=========================================== -->
