Видалив дублювання класу

--- a/portfolio.html
+++ b/portfolio.html
@@ -82,7 +82,7 @@
                         </div>
                     </li>
                     <li class="works__item">
-                        <img class="works__image" class="works-img" src="./images/imghw2007.jpg" alt="наушники" width="370"/>
+                        <img class="works__image" src="./images/imghw2007.jpg" alt="наушники" width="370"/>
                        <div class="works__card">
                             <h2 class="works__title">Проект <span lang="en">Prime</span></h2>
                             <p class="works__text">Маркетинг</p>
