--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
         <title>Webstudio</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:ital,wght@0,400;0,500;0,900;1,700&display=swap"
-            rel="stylesheet"
-        />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+            rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
         <link href="./styles/style.css" rel="stylesheet" />
     </head>
@@ -53,36 +53,38 @@
             <!--Hilites========================================== -->
             <section class="section">
                 <h2 class="hilites__main-title">Отличия</h2>
-                <ul class="lists hilites__list container">
-                    <li class="hilites__item">
-                        <h3 class="hilites__title">Внимание к деталям</h3>
-                        <p class="par hilites__par">
-                            Идейные соображения, а также начало повседневной работы по формированию
-                            позиции.
-                        </p>
-                    </li>
-                    <li class="hilites__item">
-                        <h3 class="hilites__title">Пунктуальность</h3>
-                        <p class="par hilites__par">
-                            Задача организации, в особенности же рамки и место обучения кадров
-                            влечет за собой.
-                        </p>
-                    </li>
-                    <li class="hilites__item">
-                        <h3 class="hilites__title">Планирование</h3>
-                        <p class="par hilites__par">
-                            Равным образом консультация с широким активом в значительной степени
-                            обуславливает.
-                        </p>
-                    </li>
-                    <li class="hilites__item">
-                        <h3 class="hilites__title">Современные технологии</h3>
-                        <p class="par hilites__par">
-                            Значимость этих проблем настолько очевидна, что реализация плановых
-                            заданий.
-                        </p>
-                    </li>
-                </ul>
+                <div class="container">
+                    <ul class="lists hilites__list">
+                        <li class="hilites__item">
+                            <h3 class="hilites__title">Внимание к деталям</h3>
+                            <p class="hilites__par">
+                                Идейные соображения, а также начало повседневной работы по формированию
+                                позиции.
+                            </p>
+                        </li>
+                        <li class="hilites__item">
+                            <h3 class="hilites__title">Пунктуальность</h3>
+                            <p class="hilites__par">
+                                Задача организации, в особенности же рамки и место обучения кадров
+                                влечет за собой.
+                            </p>
+                        </li>
+                        <li class="hilites__item">
+                            <h3 class="hilites__title">Планирование</h3>
+                            <p class="hilites__par">
+                                Равным образом консультация с широким активом в значительной степени
+                                обуславливает.
+                            </p>
+                        </li>
+                        <li class="hilites__item">
+                            <h3 class="hilites__title">Современные технологии</h3>
+                            <p class="hilites__par">
+                                Значимость этих проблем настолько очевидна, что реализация плановых
+                                заданий.
+                            </p>
+                        </li>
+                    </ul>
+                </div>
             </section>
             <!--Tasks========================================== -->
             <section class="tasks container">
@@ -144,14 +146,14 @@
                 </a>
                 <address>
                     <ul>
-                        <li>
+                        <li class="footer__item">
                             <a href="https://www.google.com.ua/maps" target="_blank" rel="noopener noreferrer"
                                 class="links address footer__contact footer__contact-adress">г. Киев, пр-т Леси Украинки, 26</a>
                         </li>
-                        <li>
+                        <li class="footer__item">
                             <a href="mailto:info@example.com" class="links footer__contact">info@example.com</a>
                         </li>
-                        <li>
+                        <li class="footer__item">
                             <a href="tel:+380961111111" class="links footer__contact">+380961111111</a>
                         </li>
                     </ul>
