--- a/portfolio.html
+++ b/portfolio.html
@@ -7,10 +7,10 @@
         <title>Portfolio</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:ital,wght@0,400;0,500;0,900;1,700&display=swap"
-            rel="stylesheet"
-        />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+            rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
         <link href="./styles/style.css" rel="stylesheet" />
     </head>
@@ -20,110 +20,112 @@
         <header class="header">
             <div class="header__container container">
                 <nav class="header__nav">
-                <a href="./" class="links logo-link">Web<span class="logo-studio">studio</span>
-                </a>
-                <ul class="header__nav-list">
-                    <li class="header__nav-item">
-                        <a href="./" class="links header__nav-link">Студия</a>
-                    </li>
-                    <li class="header__nav-item">
-                        <a href="./portfolio.html" class="links header__nav-link curent-link">Портфолио</a>
-                    </li>
-                    <li class="header__nav-item">
-                        <a href="" class="links header__nav-link">Контакты</a>
-                    </li>
-                </ul>
+                    <a href="./" class="links logo-link">Web<span class="logo-studio">studio</span>
+                    </a>
+                    <ul class="header__nav-list">
+                        <li class="header__nav-item">
+                            <a href="./" class="links header__nav-link">Студия</a>
+                        </li>
+                        <li class="header__nav-item">
+                            <a href="./portfolio.html" class="links header__nav-link curent-link">Портфолио</a>
+                        </li>
+                        <li class="header__nav-item">
+                            <a href="" class="links header__nav-link">Контакты</a>
+                        </li>
+                    </ul>
                 </nav>
                 <ul class="header__contact-list lists">
-                <li class="header__contact-item">
-                    <a href="mailto:info@devstudio.com" class="links header__contact-link">info@devstudio.com</a>
-                </li>
-                <li class="header__contact-item">
-                    <a href="tel:+380961111111" class="links header__contact-link">+380961111111</a>
-                </li>
+                    <li class="header__contact-item">
+                        <a href="mailto:info@devstudio.com" class="links header__contact-link">info@devstudio.com</a>
+                    </li>
+                    <li class="header__contact-item">
+                        <a href="tel:+380961111111" class="links header__contact-link">+380961111111</a>
+                    </li>
                 </ul>
             </div>
         </header>
         <!--Main content============================================ -->
         <main class="main">
             <!-- Buttons============================================= -->
-            <section class="portfolio__section section container">
-                <h1 class="portfolio__title">Портфолио</h1>
-                <ul class="portfolio__btn-list">
-                    <li class="btn-list__item"><button type="button" class="portfolio__button">Все</button></li>
-                    <li class="btn-list__item"><button type="button" class="portfolio__button">Веб-сайты</button></li>
-                    <li class="btn-list__item"><button type="button" class="portfolio__button">Приложения</button></li>
-                    <li class="btn-list__item"><button type="button" class="portfolio__button">Дизайн</button></li>
-                    <li class="btn-list__item"><button type="button" class="portfolio__button">Маркетинг</button></li>
-                </ul>
-                <!-- Works========================================= -->
-                <ul class="works">
-                    <li class="works__item">
-                        <img class="works__image" src="./images/imghw2004.jpg" alt="экран ноутбука" width="370"/>
+            <section class="portfolio__section section">
+                <div class="container">
+                    <h1 class="portfolio__title">Портфолио</h1>
+                    <ul class="portfolio__btn-list">
+                        <li class="btn-list__item"><button type="button" class="portfolio__button">Все</button></li>
+                        <li class="btn-list__item"><button type="button" class="portfolio__button">Веб-сайты</button></li>
+                        <li class="btn-list__item"><button type="button" class="portfolio__button">Приложения</button></li>
+                        <li class="btn-list__item"><button type="button" class="portfolio__button">Дизайн</button></li>
+                        <li class="btn-list__item"><button type="button" class="portfolio__button">Маркетинг</button></li>
+                    </ul>
+                    <!-- Works========================================= -->
+                    <ul class="works">
+                        <li class="works__item">
+                            <img class="works__image" src="./images/imghw2004.jpg" alt="экран ноутбука" width="370"/>
+                            <div class="works__card">
+                                <h2 class="works__title">Технокряк</h2>
+                                <p class="works__text">Веб-сайт</p>
+                            </div>
+                        </li>
+                        <li class="wworks__item">
+                            <img class="works__image" src="./images/imghw2009.jpg" alt="баскетболисты" width="370"/>
+                            <div class="works__card">
+                                <h2 class="works__title">
+                                Постер <span lang="en">New Orlean vs Golden Star</span>
+                                </h2>
+                                <p class="works__text">Дизайн</p>
+                            </div>
+                        </li>
+                        <li class="works__item">
+                            <img class="works__image" src="./images/imghw2008.jpg" alt="логотип ресторана" width="370"/>
                         <div class="works__card">
-                            <h2 class="works__title">Технокряк</h2>
-                            <p class="works__text">Веб-сайт</p>
-                        </div>
-                    </li>
-                    <li class="wworks__item">
-                        <img class="works__image" src="./images/imghw2009.jpg" alt="баскетболисты" width="370"/>
+                                <h2 class="works__title">Ресторан <span lang="en">Seafood</span></h2>
+                                <p class="works__text">Приложение</p>
+                            </div>
+                        </li>
+                        <li class="works__item">
+                            <img class="works__image" src="./images/imghw2007.jpg" alt="наушники" width="370"/>
                         <div class="works__card">
-                            <h2 class="works__title">
-                            Постер <span lang="en">New Orlean vs Golden Star</span>
-                            </h2>
-                            <p class="works__text">Дизайн</p>
-                        </div>
-                    </li>
-                    <li class="works__item">
-                        <img class="works__image" src="./images/imghw2008.jpg" alt="логотип ресторана" width="370"/>
-                       <div class="works__card">
-                            <h2 class="works__title">Ресторан <span lang="en">Seafood</span></h2>
-                            <p class="works__text">Приложение</p>
-                        </div>
-                    </li>
-                    <li class="works__item">
-                        <img class="works__image" src="./images/imghw2007.jpg" alt="наушники" width="370"/>
-                       <div class="works__card">
-                            <h2 class="works__title">Проект <span lang="en">Prime</span></h2>
-                            <p class="works__text">Маркетинг</p>
-                        </div>
-                    </li>
-                    <li class="works__item">
-                        <img class="works__image" src="./images/imghw2006.jpg" alt="коробки" width="370"/>
-                       <div class="works__card">
-                            <h2 class="works__title">Проект <span lang="en">Boxes</span></h2>
-                            <p class="works__text">Приложение</p>
-                        </div>
-                    </li>
-                    <li class="works__item">
-                        <img class="works__image" src="./images/imghw2005.jpg" alt="экран копьютера" width="370"/>
-                       <div class="works__card">
-                            <h2 class="works__title" lang="en">Inspiration has no Borders</h2>
-                            <p class="works__text">Веб-сайт</p>
-                        </div>
-                    </li>
-                    <li class="works__item">
-                        <img class="works__image" src="./images/imghw2001.jpg" alt="журнал" width="370"/>
-                       <div class="works__card">
-                            <h2 class="works__title">Издание <span lang="en">Limited Edition</span></h2>
-                            <p class="works__text">Дизайн</p>
-                        </div>
-                    </li>
-                    <li class="works__item">
-                        <img class="works__image" src="./images/imghw2002.jpg" alt="ценник" width="370"/>
+                                <h2 class="works__title">Проект <span lang="en">Prime</span></h2>
+                                <p class="works__text">Маркетинг</p>
+                            </div>
+                        </li>
+                        <li class="works__item">
+                            <img class="works__image" src="./images/imghw2006.jpg" alt="коробки" width="370"/>
                         <div class="works__card">
-                            <h2 class="works__title">Проект <span lang="en">LAB</span></h2>
-                            <p class="works__text">Маркетинг</p>
-                        </div>
-                    </li>
-                    <li class="works__item">
-                        <img class="works__image" src="./images/imghw2003.jpg" alt="экран ноутбука" width="370"/>
-                       <div class="works__card">
-                            <h2 class="works__title" lang="en">Growing Business</h2>
-                            <p class="works__text">Приложение</p>
-                        </div>
-                    </li>
-                </ul>
+                                <h2 class="works__title">Проект <span lang="en">Boxes</span></h2>
+                                <p class="works__text">Приложение</p>
+                            </div>
+                        </li>
+                        <li class="works__item">
+                            <img class="works__image" src="./images/imghw2005.jpg" alt="экран копьютера" width="370"/>
+                        <div class="works__card">
+                                <h2 class="works__title" lang="en">Inspiration has no Borders</h2>
+                                <p class="works__text">Веб-сайт</p>
+                            </div>
+                        </li>
+                        <li class="works__item">
+                            <img class="works__image" src="./images/imghw2001.jpg" alt="журнал" width="370"/>
+                        <div class="works__card">
+                                <h2 class="works__title">Издание <span lang="en">Limited Edition</span></h2>
+                                <p class="works__text">Дизайн</p>
+                            </div>
+                        </li>
+                        <li class="works__item">
+                            <img class="works__image" src="./images/imghw2002.jpg" alt="ценник" width="370"/>
+                            <div class="works__card">
+                                <h2 class="works__title">Проект <span lang="en">LAB</span></h2>
+                                <p class="works__text">Маркетинг</p>
+                            </div>
+                        </li>
+                        <li class="works__item">
+                            <img class="works__image" src="./images/imghw2003.jpg" alt="экран ноутбука" width="370"/>
+                        <div class="works__card">
+                                <h2 class="works__title" lang="en">Growing Business</h2>
+                                <p class="works__text">Приложение</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
             </section>
         </main>
         <!--Footer=============================================== -->
@@ -134,14 +136,14 @@
                 </a>
                 <address>
                     <ul>
-                        <li>
+                        <li class="footer__item">
                             <a href="https://www.google.com.ua/maps" target="_blank" rel="noopener noreferrer"
                                 class="links address footer__contact footer__contact-adress">г. Киев, пр-т Леси Украинки, 26</a>
                         </li>
-                        <li>
+                        <li class="footer__item">
                             <a href="mailto:info@example.com" class="links footer__contact">info@example.com</a>
                         </li>
-                        <li>
+                        <li class="footer__item">
                             <a href="tel:+380961111111" class="links footer__contact">+380961111111</a>
                         </li>
                     </ul>
